// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> with "no-gutters" prop should not have gutters 1`] = `
.Container-module__container___ZBwIj {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  max-width: 95%;
}

.Container-module__no-gutters___sX06G {
  padding: 0!important;
}

@media (min-width:0px) {
  .Container-module__container___ZBwIj {
    padding: var(--qtm-gutter-xsmall);
  }
}

@media (min-width:600px) {
  .Container-module__container___ZBwIj {
    padding: var(--qtm-gutter-small);
  }
}

@media (min-width:1024px) {
  .Container-module__container___ZBwIj {
    padding: var(--qtm-gutter-medium);
  }
}

@media (min-width:1440px) {
  .Container-module__container___ZBwIj {
    padding: var(--qtm-gutter-large);
  }
}

<div
  class="Container-module__container___ZBwIj Container-module__no-gutters___sX06G"
>
  Content
</div>
`;

exports[`<Container /> with fluid prop should have a fluid width 1`] = `
.Container-module__container___ZBwIj {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  max-width: 95%;
}

.Container-module__container-fluid___jVF-f {
  max-width: none!important;
}

@media (min-width:0px) {
  .Container-module__container___ZBwIj {
    padding: var(--qtm-gutter-xsmall);
  }
}

@media (min-width:600px) {
  .Container-module__container___ZBwIj {
    padding: var(--qtm-gutter-small);
  }
}

@media (min-width:1024px) {
  .Container-module__container___ZBwIj {
    padding: var(--qtm-gutter-medium);
  }
}

@media (min-width:1440px) {
  .Container-module__container___ZBwIj {
    padding: var(--qtm-gutter-large);
  }
}

<div
  class="Container-module__container___ZBwIj Container-module__container-fluid___jVF-f"
>
  Content
</div>
`;

exports[`<Container /> with withBreakpoints prop should have a fixed width 1`] = `
.Container-module__container___ZBwIj {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  max-width: 95%;
}

@media (min-width:0px) {
  .Container-module__container___ZBwIj {
    padding: var(--qtm-gutter-xsmall);
  }

  .Container-module__with-breakpoint___T6-k5 {
    width: var(--qtm-container-xsmall);
  }
}

@media (min-width:600px) {
  .Container-module__container___ZBwIj {
    padding: var(--qtm-gutter-small);
  }

  .Container-module__with-breakpoint___T6-k5 {
    width: var(--qtm-container-small);
  }
}

@media (min-width:1024px) {
  .Container-module__container___ZBwIj {
    padding: var(--qtm-gutter-medium);
  }

  .Container-module__with-breakpoint___T6-k5 {
    width: var(--qtm-container-medium);
  }
}

@media (min-width:1440px) {
  .Container-module__container___ZBwIj {
    padding: var(--qtm-gutter-large);
  }

  .Container-module__with-breakpoint___T6-k5 {
    width: var(--qtm-container-large);
  }
}

<div
  class="Container-module__container___ZBwIj Container-module__with-breakpoint___T6-k5"
>
  Content
</div>
`;
